Fix formatting of array-fields in the test case action's history